fixed spacing between navbar and page

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,9 +58,8 @@ a:hover {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 2;
   background-color: #181719;
-  height: 30;
+  height: 100px;
   
 }
 
@@ -83,7 +82,7 @@ a:hover {
 #logophoto img{
   /* object-fit:cover;
   overflow: hidden; */
-  height: 100%;
+  height: 90%;
   width: 100%;
 }
 
@@ -108,7 +107,8 @@ a:hover {
 
 
 .contact-cards-container {
-  overflow-y: hidden;
+  height: calc(100vh - 116px);
+  overflow-y: auto;
   background-color: #1d2434
 }
 
@@ -175,10 +175,12 @@ a:hover {
 }
 
 .col-md-8 {
+  margin-top: 40px;
   background-color: #44496f
 }
 
 .col-md-4 {
+  margin-top: 40px;
   background-color: #1d2434
 }
 
